--- a/angular.json
+++ b/angular.json
@@ -120,8 +120,9 @@
       }
     }
   },
-  "defaultProject": "issues-list",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
