chore: org updates

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,7 @@
   "cli": {
     "schematicCollections": [
       "@angular-eslint/schematics"
-    ]
+    ],
+    "analytics": "f80ebfaf-e0cd-45d4-b83c-1bc8c45b6ccb"
   }
 }
