--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "@angular/compiler-cli": "16.2.1",
     "@types/jasmine": "4.3.5",
     "@types/node": "18.17.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
+    "eslint": "8.39.0",
     "jasmine-core": "4.6.0",
     "karma": "6.4.2",
     "karma-chrome-launcher": "3.2.0",
