--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "@angular/compiler-cli": "17.0.6",
     "@types/jasmine": "4.6.4",
     "@types/node": "18.18.13",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "eslint": "8.53.0",
     "jasmine-core": "4.6.0",
     "karma": "6.4.2",
     "karma-chrome-launcher": "3.2.0",
