--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,50 +1,17 @@
 {
-  "root": true,
-  "ignorePatterns": [
-    "projects/**/*"
-  ],
-  "overrides": [
-    {
-      "files": [
-        "*.ts"
-      ],
-      "parserOptions": {
-        "project": [
-          "tsconfig.json"
-        ],
-        "createDefaultProgram": true
-      },
-      "extends": [
-        "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ],
-      "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "app",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "app",
-            "style": "kebab-case"
-          }
+  "extends": "@nhcarrigan/eslint-config-angular",
+  "rules": {
+    "import/no-unresolved": [
+      "warn",
+      {
+        "ignore": [
+          "@angular/common/http",
+          "@angular/core/testing",
+          "@angular/router/testing",
+          "zone.js/testing",
+          "@angular/platform-browser-dynamic/testing"
         ]
       }
-    },
-    {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "plugin:@angular-eslint/template/recommended"
-      ],
-      "rules": {}
-    }
-  ]
+    ]
+  }
 }
