--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "lint": "ng lint",
+    "lint": "ng lint && prettier src --check",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "deploy": "ng deploy"
@@ -31,17 +31,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.0.8",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
     "@angular/cli": "17.0.8",
     "@angular/compiler-cli": "17.0.8",
+    "@nhcarrigan/eslint-config-angular": "1.0.1",
+    "@nhcarrigan/prettier-config": "3.2.0",
     "@types/jasmine": "4.6.4",
     "@types/node": "18.19.3",
-    "@typescript-eslint/eslint-plugin": "6.16.0",
-    "@typescript-eslint/parser": "6.16.0",
     "eslint": "8.56.0",
     "jasmine-core": "4.6.0",
     "karma": "6.4.2",
